--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   <body>
     <header class="page-header">
     <div class="container">
-      Украина, Киев
-      +380990000000
-      stadal01@gmail.com
+      <a class="header-email" href="mailto:stadal01@gmail.com">stadal01@gmail.com</a>
+      <a class="header-phone" href="tel:+380995438705">+380995438705</a>
     </div>
     </header>
 
@@ -26,6 +25,9 @@
     <section class="intro">
       <div class="container"
       <h2 class="subheading">Привет, меня зовут Влад!</h2>
+      <figure class="user-image">
+        <img src="files/user.jpg" width="928" height="536" alt="Фотография пользователя">
+      </figure>
       <h3>Я - начинающий Junior верстальщик</h3>
       <p>Совсем недавно я решил попробовать себя в сфере IT, а именно в качестве веб-разработчика</p>
       <h3>Разработка веб-страниц и приложений</h3>
@@ -36,7 +38,10 @@
     <section class="portfolio">
       <div class="container"
       <h2 class="subheading">Мои работы</h2>
-
+      <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Сайт магазина товаров для дома">
+        <a class="button" href="source/project-gloevk/index.html">Открыть страницу</a>
+      </figure>
       <h3>Магазин товаров для дома</h3>
       <p>Мой первый сайт.</p>
 
@@ -47,9 +52,8 @@
 
     <footer class="page-footer">
     <div class="container">
-      Украина, Киев
-      +380990000000
-      stadal01@gmail.com
+      <a class="footer-email" href="mailto:stadal01@gmail.com">stadal01@gmail.com</a>
+      <a class="footer-phone" href="tel:+380995438705">+380995438705</a>
      </div>
     </footer>
   </body>
