--- a/index.html
+++ b/index.html
@@ -28,11 +28,24 @@
       <figure class="user-image">
         <img src="files/user.jpg" width="928" height="536" alt="Фотография пользователя">
       </figure>
+      <div>
       <h3>Я - начинающий Junior верстальщик</h3>
       <p>Совсем недавно я решил попробовать себя в сфере IT, а именно в качестве веб-разработчика</p>
+      </div>
+      <div>
       <h3>Разработка веб-страниц и приложений</h3>
       <p>После окончания обучения я могу быть полезен в качестве разработчика</p>
-    </div>
+      </div>
+      <div class="skills">
+      <h3>Мои навыки</h3>
+      <dl class="skills-list">
+      <dt class="skill-html">HTML</dt>
+      <dd class="level"><div style="width: 60%;">60%</div></dd>
+      <dt class="skill-css">CSS</dt>
+      <dd class="level"><div style="width: 40%;">40%</div></dd>
+      </dl>
+      </div>
+      </div>
     </section>
 
     <section class="portfolio">
@@ -47,8 +60,35 @@
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
-    </div>
-    </section>
+      </div>
+      <form action="mailto:stadal01@gmail.com" enctype="text/plain" method="get"></form>
+      <fieldset>
+      <legend>Форма для обратной связи</legend>
+          <label for="answer">Вакансия:</label>
+          <input type="radio" name="answer" id="answer" value="trainee">Трейни
+          <input type="radio" name="answer" id="answer" value="verst">Верстальщик
+          <input type="radio" name="answer" id="answer" value="junior">Джуниор фронтенд
+          <label for="name">Введите имя:</label>
+          <input type="text" name="name" id="name" required>
+          <label for="email">Введите email:</label>
+          <input type="email" name="email" id="email" required>
+          <label for="tel">Введите номер телефона:</label>
+          <input type="tel" name="tel" id="tel">
+        <label for="city-select">Ваш город:</label>
+        <select name="city" id="city-select">
+          <option value="">--Выберите город--</option>
+          <option value="kyiv">Киев</option>
+          <option value="kharkiv">Харьков</option>
+          <option value="odesa">Одесса</option>
+          <option value="lviv">Львов</option>
+        </select>
+        <select>
+        <input type="checkbox" name="agree" required>Я согласен на обработку данных
+        </select>
+        <button type="submit">Отправить</button>
+      </fieldset>
+      </form>
+     </section>
 
     <footer class="page-footer">
     <div class="container">
