--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
       </div>
-      <form action="mailto:stadal01@gmail.com" enctype="text/plain" method="get"></form>
+      <form action="mailto:stadal01@gmail.com" enctype="text/plain" method="get">
       <fieldset>
       <legend>Форма для обратной связи</legend>
           <label for="answer">Вакансия:</label>
